# predators-and-prey

./: CLAUDE.md  Cargo.toml  DEPLOYMENT.md  index.html
.claude/: settings.local.json
.github/workflows/: deploy.yml
src/: components.rs  main.rs  resources.rs  tests.rs  utils.rs
src/systems/: environment.rs  input.rs  interaction.rs  lifecycle.rs  mod.rs  movement.rs  setup.rs  stats.rs  ui.rs
