[package]
name = "predators-and-prey"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
rand = "0.8"

# Enable getrandom's "js" feature for WASM builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in the dev profile for WASM
[profile.dev.package.wasm-bindgen]
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.release]
opt-level = 3
lto = "thin"

# Optimize for size in wasm builds
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
